backend/broPayCRM/force-app/main/default/objects/Recurring_Bill__c/Recurring_Bill__c.object-meta.xml
<CustomObject>
    <label>Recurring Bill</label>
    <nameField>
        <label>Recurring Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>