backend/broPayCRM/force-app/main/default/objects/Recurring_Bill__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this subscription still active?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>