backend/broPayCRM/force-app/main/default/objects/Recurring_Bill__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who added the recurring bill</description>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recurring_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>