backend/broPayCRM/force-app/main/default/objects/Recurring_Bill__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <description>When is the next due</description>
    <label>Next Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>